# opengl-samples

./: Makefile  README.md
.github/: copilot-instructions.md
.github/copilot/: development-notes.md
.github/workflows/: build.yml  erlang.yml  native.yml
samples/bar/: main.c
samples/c/: Makefile
samples/c/src/bar/: main.c
samples/c/src/colored-triangle/: main.c
samples/c/src/common/: matrix.h  window.c  window.h
samples/c/src/foo/: main.c
samples/c/src/hello-world/: main.c
samples/c/src/textured-cube/: main.c
samples/common/: window.c  window.h
samples/erlang/src/: opengl_samples.app.src  opengl_samples.erl
samples/native/: CMakeLists.txt  Makefile
samples/native/src/colored-triangle/: main.c
samples/native/src/common/: gl_api.h  matrix.c  window.c  window.h
samples/native/src/textured-cube/: main.c
